--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -11,7 +11,7 @@
         </a>
         <div class="card  mx-auto py-4 ">
 
-            <h5 class="mx-3 mb-3">Editing quiz page: {{quiz_page.title}}</h5>
+            <h5 class="mx-3 mb-3">Editing page: {{quiz_page.title}}</h5>
 
 
             <div
