--- a/src/quizRender/templates/take_quiz/includes/footer.html
+++ b/src/quizRender/templates/take_quiz/includes/footer.html
@@ -24,18 +24,25 @@
         </div>
     </nav>
     <div class="copyright">
-        <p>Copyright © {{site.site_name}} <script>document.write(new Date().getFullYear())</script>.
+        <p>Copyright © <script>document.write(new Date().getFullYear())</script>.
         </p>
-        <p class="text-center">
-            Powered by
-        </p>
-        {% if site.site_logo %}
-            <a class="text-center justify-content-center text-center d-flex mx-auto" href="{% url 'home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
+        {% if quiz.logo %}
+        <a class="text-center justify-content-center text-center d-flex mx-auto my-2" href="{% url 'home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
+
                 <span class="">
-                    <img src="{{site.site_logo.url}}" alt="" style="max-width:80%;max-height:5rem;">
+                    <img src="{{quiz.logo.url}}" alt="" style="max-width:80%;max-height:5rem;">
                 </span>
-            </a>
-        {% endif %}
+        </a>
+                {% endif %}
+               
+              <a href="{% url 'home' %}">
+                  <p class="text-center mt-4">
+                      Powered by quizElements
+                    </p>
+                </a>  
+            
+
+
 
 
 
