--- a/src/templates/home_site2/register.html
+++ b/src/templates/home_site2/register.html
@@ -15,7 +15,7 @@
                     <div class="card-body p-4">
                         <div class="text-center ">
                             <h5>Register</h5>
-                            <p class="text-muted">Sign up below</p>
+                            <p class="text-muted">Register below to start your free 7 day trial</p>
                         </div>
 
 
