--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -49,6 +49,10 @@
         }
     {% endautoescape %}
 
+    p, li, ul {
+        font-size: 1.2rem;
+    }
+
     :root {
         --bs-body-bg: #ffffff;
     }
