--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -28,7 +28,7 @@
             </h2>
 
             <div class="text-center" >
-                <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button ">Start free trial now</a>
+                <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button ">Register for 7 day free trial </a>
                 <p class="text-center my-1" >No credit card required.
                 </p>
             </div>
@@ -51,22 +51,22 @@
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <h2>10+ elements to choose from</h2>
+            <p>Create your survey the way ypu want with ease.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <h2>Fully white-label</h2>
+            <p>Maintain your brand image by adding your logo</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <h2>Unlimited responses and surveys</h2>
+            <p>Collect as much data as you require without any extra charges</p>
         </div><!-- /.col-lg-4 -->
     </div>
 
@@ -82,20 +82,23 @@
                         <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
                         </div>
 
-                        <p class="mb-0">
-                            Easily create the perfect durvey or quiz. With over 8+ elements to choose from everything will be customizable.
+                        <p class="mb-0 display-4">
+                            <ul class="list-group">
 
-                            <br>
-                            <br>
+                                <li class="list-group-item">
+                                    With over 10+ elements to choose from easily create the perfect customer survey
+                                </li class="list-group-item">
 
-                            <h4>
-                                Want to control how many questions there are per page?
-                            </h4>
-                            <br>
-                            <h5>
-                                Easy to do so with our quiz builder.
-                            </h5>
+                                <li class="list-group-item">
+                                    Control how many questions there are per page
+                                </li class="list-group-item">
 
+                                <li class="list-group-item">
+                                    Maintain your brand identity by adding your logo 
+                                </li class="list-group-item">
+                                
+                                
+                            </ul>
 
                         </p>
                     </div>
@@ -106,8 +109,25 @@
 
                         <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
                         </div>
-                        <p class="mb-0">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                    </div>
+                        <p class="mb-0 display-4">
+                            <ul class="list-group">
+
+                                <li class="list-group-item">
+                                   Send your survey to others by a shareable link
+                                </li class="list-group-item">
+
+                                <li class="list-group-item">
+                                    Collect unlimited responses
+                                </li class="list-group-item">
+
+                                <li class="list-group-item">
+                                    Coming soon: QR code link to survey
+                                </li class="list-group-item">
+                                
+                                
+                            </ul>
+
+                        </p>                    </div>
                 </li>
                 <li class="media">
                     <div class="media-body">
@@ -115,8 +135,19 @@
 
                         <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
                         </div>
-                        <p class="mb-0">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                    </div>
+                        <p class="mb-0 display-4">
+                            <ul class="list-group">
+
+                                <li class="list-group-item">
+                                    View each survey response including partially completed responses
+                                </li class="list-group-item">
+
+                             
+                                
+                                
+                            </ul>
+
+                        </p>                    </div>
                 </li>
             </ul>
         </div>
