--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -40,7 +40,7 @@
             <img
                 src="{% static 'images/laptop-mockup-quiz-creator.jpg' %}"
                 class="d-block mx-lg-auto img-fluid " alt="quizElements quiz survey creation creator on laptop" loading="lazy"
-                style="max-height:30rem;" >
+                style="max-height:15rem;" >
         </div>
     </div>
 
@@ -51,21 +51,31 @@
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
-            <h2>10+ elements to choose from</h2>
+            <h2 class="text-center">10+ elements</h2>
+            <div class="img-fluid mx-auto justify-content-center d-flex">
+                <img src="{% static 'images/elements.png' %}" alt="" class="">
+            </div>
             <p>Create your survey the way ypu want with ease.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2>Fully white-label</h2>
+            <h2 class="text-center  ">Fully white-labelled</h2>
+            <div class="img-fluid mx-auto justify-content-center d-flex">
+                <img src="{% static 'images/your_logo_here.png' %}" alt="" class="">
+            </div>
             <p>Maintain your brand image by adding your logo</p>
+            
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2>Unlimited responses and surveys</h2>
+            <h2 class="text-center">Unlimited responses</h2>
+            <div class="img-fluid mx-auto justify-content-center d-flex">
+                <img src="{% static 'images/unlimited.png' %}" alt="" class="">
+            </div>
             <p>Collect as much data as you require without any extra charges</p>
         </div><!-- /.col-lg-4 -->
     </div>
@@ -73,14 +83,18 @@
 
 
     <div class="row" >
-        <div class="bootstrap-media">
+        <div class="bootstrap-media w-100">
             <ul class="list-unstyled">
-                <li class="media">
-                    <div class="media-body">
-                        <h2 class="mt-0 ">Step 1. Create</h2>
-
-                        <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
-                        </div>
+                <div class="media-body">
+                    <h2 class="mt-0 ">Step 1. Create</h2>
+        
+                    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+                    </div>
+               
+               
+               
+               
+                    <li class="media">
 
                         <p class="mb-0 display-4">
                             <ul class="list-group">
@@ -103,12 +117,12 @@
                         </p>
                     </div>
                 </li>
+                <h2 class="mt-0">Step 2. Generate responses</h2>
+
+                <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+                </div>
                 <li class="media my-4">
                     <div class="media-body">
-                        <h2 class="mt-0">Step 2. Generate responses</h2>
-
-                        <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
-                        </div>
                         <p class="mb-0 display-4">
                             <ul class="list-group">
 
@@ -129,12 +143,12 @@
 
                         </p>                    </div>
                 </li>
+                <h2 class="mt-0">Step 3. Analyze</h2>
+
+                <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+                </div>
                 <li class="media">
                     <div class="media-body">
-                        <h2 class="mt-0">Step 3. Analyze</h2>
-
-                        <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
-                        </div>
                         <p class="mb-0 display-4">
                             <ul class="list-group">
 
