--- a/src/templates/dashboard2/components/htmx/subscription_choices_include.html
+++ b/src/templates/dashboard2/components/htmx/subscription_choices_include.html
@@ -38,7 +38,7 @@
                     </h2>
                     <br>
                     <br>
-                    <span class="float-end ms-1" style="align-self:end"> per mo</span>
+                    <span class="float-end ms-1 ml-1" style="align-self:end"> per mo</span>
 
 
                     <script>
