Improve subscribe frontend

--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -66,7 +66,7 @@
                                 {% include 'quiz_settings/logo_upload_form.html' %}
                                 {% include 'quiz_conversion_tracking/conversion_api.html' %}
                                 {% include 'quiz_settings/analytics_script_form.html' %}
-                                {% include 'quiz_settings/color_settings.html' %}
+                                {% comment %} {% include 'quiz_settings/color_settings.html' %} {% endcomment %}
 
 
                             </div>
