--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -156,8 +156,13 @@
                                     View each survey response including partially completed responses
                                 </li class="list-group-item">
 
-                             
-                                
+                                <li class="list-group-item">
+                                    Detailed question by question breakdown with graphs
+                                </li class="list-group-item">
+
+                                <li class="list-group-item">
+                                    Analyze data from all sources including partial completions
+                                </li class="list-group-item">      
                                 
                             </ul>
 
