--- a/src/templates/dashboard2/components/htmx/subscription_choices_htmx.html
+++ b/src/templates/dashboard2/components/htmx/subscription_choices_htmx.html
@@ -8,10 +8,10 @@
         {% if user_subscription %}
 
             <div class="row">
-                <div class="col-xl-12">
+                <div class="col-lg-9 mx-auto">
                     <div class="card">
-                        <h5 class="card-title">Your current subscription</h5>
                         <div class="card-body">
+                            <h5 class="card-title">Your current subscription</h5>
                             Amount: {{user_subscription.subscription_choice.currency.currency_symbol}}{{user_subscription.amount_subscribed}}
                             {{user_subscription.subscription_choice.currency.currency_code}}
                             <br>
@@ -100,7 +100,10 @@
 
 
         {% endif %}
-        <div class="row justify-content-center">
+
+        <div class="col-lg-9  bg-white rounded mx-auto py-4">
+
+        <div class="row justify-content-center ">
             {% comment %} Currency converter {% endcomment %}
             <div class="row dropdown  custom-dropdown my-1" style="float:right;">
 
@@ -165,7 +168,7 @@
 
         {% if not user_subscription.paid %}
 
-            <div class="default-tab">
+            <div class="custom-tab-1">
                 <ul class="nav nav-tabs justify-content-center text-center" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#Monthly"></i>Monthly</a>
@@ -206,6 +209,8 @@
             </div>
             </div>
         {% endif %}
+
+        </div>
 
 
 
