--- a/src/templates/dashboard2/thankyou.html
+++ b/src/templates/dashboard2/thankyou.html
@@ -6,6 +6,8 @@
             <!-- Start right Content here -->
             <!-- ============================================================== -->
 
+<div class="card col-lg-9 mx-auto my-3 py-3">
+
 
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -54,6 +56,7 @@
                             <!-- end col -->
     </div>
                         <!-- end row -->
+</div>
 
 
 
